--- a/contactinfo.html
+++ b/contactinfo.html
@@ -44,11 +44,11 @@
                 <!-- </div> -->
                     <div class="collapse navbar-collapse justify-content-end text" id="fog">
                           <ul class="navbar-nav">
-                              <li class="nav-item active">
+                              <li class="nav-item active bar">
                                 <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
                               </li>
                             
-                              <li class="nav-item">
+                              <li class="nav-item bar">
                                 <a class="nav-link" href="portfolio.html">Portfolio</a>
                               </li>
                              
