--- a/portfolio.html
+++ b/portfolio.html
@@ -137,7 +137,7 @@
                     </div>
                 
                     <div class="folio">
-                        <a href="https://yugmani.github.io/carousel/">
+                        <a href="https://yugmani.github.io/CarouselNew/">
                             <img src="assets/images/carousel.png" class="logos">
                             <div class="caption">Image Carousel</div>
                         </a>
